# unsafe-rust

./: Cargo.toml
src/: main.rs  mutable_static_variables.rs  raw_pointers.rs
