[package]
name = "unsafe-rust"
version = "0.1.0"
authors = ["Muhammad Rajab Raza <mohammadrajabraza@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



[[bin]]
name = "rp"
path = "src/raw_pointers.rs"

[[bin]]
name = "ms"
path = "src/mutable_static_variables.rs"